--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </script>
   
     <!-- Primary Meta Tags -->
-    <title>Scoutier - Advanced Bulk Email Outreach Tool</title>
+    <title>scouter - Advanced Bulk Email Outreach Tool</title>
     <meta name="description" content="Scoutier is an easy-to-use email outreach tool that helps you send personalized emails in bulk. Efficient, fast, and user-friendly.">
     <meta name="keywords" content="Scoutier, email outreach, bulk emails, send emails, email tool, email management">
     <meta name="author" content="Scoutier Team">
@@ -483,7 +483,7 @@
           <h1 class="text-2xl font-bold text-blue-500 dark:text-blue-400">
             Scouter
           </h1>
-          <span class="md:inline-block text-xs bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-300 px-2 py-0.5 rounded-full">Pro</span>
+          <span class="md:inline-block text-xs bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-300 px-2 py-0.5 rounded-full">Elite</span>
         </div>
       </div>
  
