--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
 
 
       <!-- Built with Love -->
-      <p class="mt-1">Developed by <span class="font-medium text-blue-500">Vision digital</span></p>
+      <p class="mt-1">Developed by <span class="font-medium text-blue-500">Vision Team</span></p>
 
       <!-- Social Links -->
       <div class="flex justify-center items-center gap-4">
