--- a/index.html
+++ b/index.html
@@ -945,11 +945,11 @@
   <footer class="mt-12 py-6 border-t border-gray-200 dark:border-gray-800 text-center text-sm text-gray-500 dark:text-gray-400 bg-white dark:bg-gray-800">
     <div class="container mx-auto px-4 space-y-4">
       <!-- Copyright -->
-      <p>&copy; <span id="currentYear"></span> Scoutier. All rights reserved.</p>
+      <p>&copy; <span id="currentYear"></span> Scouter. All rights reserved.</p>
 
 
       <!-- Built with Love -->
-      <p class="mt-1">Developed by <span class="font-medium text-blue-500">Vision digital</span></p>
+      <p class="mt-1">Developed by <span class="font-medium text-blue-500">Dynamic Sales</span></p>
 
       <!-- Social Links -->
       <div class="flex justify-center items-center gap-4">
